# hewn

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FLINT_GRAMMAR.ebnf  FLINT_SYSTEM_PROMPT.txt  LICENSE  README.md  README_SIGIL.md  SECURITY.md  SIGIL_GRAMMAR.ebnf  SIGIL_SYSTEM_PROMPT.txt  SUPPORT.md  pyproject.toml
assets/: README.md
benchmarks/: README.md  RUNBOOK.md  compare_v1_v2.py  compare_versions.py  extract_evidence.py  judge.py  measure.py  run.py
docs/: architecture.md  benchmarks.md  breakthroughs.md  calibration.md  design.md  failure_modes.md  flint5_tool_exploration.md  flint_thinking_plan.md  flint_thinking_plan_v4_approved.md  frontier.md  launch_benchmark_table.md  launch_checklist.md  launch_opus47.md  manifesto.md  portability.md  provider_strategy.md  research.md  results.md  roadmap.md  testing.md
evals/: README.md  benchmark_matrix.json  build_adaptive_run.py  build_compiled_macro_tasks.py  build_extended_corpus.py  build_macro_tasks.py  build_routed_run.py  build_task_capsules.py  cache_report.py  calibrate_anthropic_model.py  calibrate_gemini_model.py  calibrate_multi_ir_model.py  calibrate_openai_model.py  claude_code_max_long_multiturn.jsonl  claude_code_max_long_prompts.jsonl  claude_code_max_multiturn.jsonl  claude_code_max_prompts.jsonl  measure.py  rerender_run.py  run_anthropic.py  run_gemini.py  run_openai.py  sample_run.jsonl  suggest_profile.py  tasks.jsonl  tasks_architecture.jsonl  tasks_architecture_bridge_extended.jsonl  tasks_architecture_capsule.jsonl  tasks_compile.jsonl  (+41 more)
(+2163 files in other folders)
