[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sigil-ir"
version = "0.1.0"
description = "A minimal parser and audit runtime for the SIGIL reasoning IR."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Tommaso" }
]
dependencies = []

[project.scripts]
sigil = "sigil.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

