[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flint-ir"
version = "0.7.0"
description = "A minimal parser and audit runtime for the Flint reasoning IR."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Tommaso" }
]
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0"]

[project.scripts]
flint-ir = "flint.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

