[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flint-ir"
version = "0.8.4"
description = "Hewn (formerly Flint): a minimal parser and audit runtime for a compact reasoning IR."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Tommaso" }
]
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0"]

[project.scripts]
hewn-ir = "flint.cli:main"
flint-ir = "flint.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
